2000-04-20  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 10861: Completion/Bsd/.distfiles, Completion/Bsd/_bsd_pkg,
 	Completion/Bsd/_cvsup, Completion/Bsd/_kld: new completions for
 	FreeBSD commands
	
	* 10854: Completion/Commands/_expand_word, Completion/Core/_expand,
 	Doc/Zsh/compsys.yo: default values for styles in _expand_word,
 	listing expansions with ^Xd, _expand uses add-space style
	
2000-04-20  Oliver Kiddle  <opk@zsh.org>

	* 10857: Completion/AIX/.distfiles Completion/AIX/_floppy
	Completion/AIX/_lsdev Completion/AIX/_lslv Completion/AIX/_lspv
	Completion/AIX/_lsvg Completion/AIX/_physical_volumes
	Completion/AIX/_smit Completion/AIX/_volume_groups: new completions
	for AIX commands

	* 10848: Completion/Builtins/_print, Completion/Core/.distfiles,
	Completion/Core/_file_descriptors: Add completion for file
	descriptors

2000-04-19  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* Config/version.mk: 3.1.7-pre-1

	* Functions/Misc/.distfiles: add zstyle+.

	* Test/.distfiles, Test/12procsubst.ztst, Test/13parameter.ztst,
	Test/ztst.zsh: new tests; use null glob clearing up.

2000-04-19  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* Ollivier Robert: 10844: prefer curses to termcap on HPUX 11
	like 10.

2000-04-19  Oliver Kiddle  <opk@zsh.org>

	* 10833: Completion/Builtins/_print, Completion/Builtins/.distfiles,
	Completion/Builtins/_nothing: new print completion, no arguments to
	clear and logname

2000-04-19  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 10830: Doc/Makefile.in: don't force dvips to use 300 dpi.

2000-04-19  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 10828: Src/module.c, Src/Zle/zle_tricky.c: ensure zsh/compctl
 	(ick!) module is loaded when zle is loaded from init file but
 	zsh/complete isn't
	
	* 10816: Completion/Core/_main_complete, Doc/Zsh/compsys.yo,
 	Doc/Zsh/mod_complist.yo, Src/Zle/complist.c: default for
 	list-prompt style, %[MLP] use fixed-width strings, %[mlp] use